# telegram_webapp_profile

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: .env.template  create_fastapi_app.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  users.py  webhook.py
backend/app/bot/: create_bot.py
backend/app/bot/routers/: __init__.py
backend/app/bot/routers/commands/: __init__.py  base_commands.py
backend/app/core/: config.py  setup_db.py
backend/app/core/models/: __init__.py  base.py  user.py
backend/app/core/schemas/: users.py
backend/app/services/: users.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: Loader.vue
frontend/src/router/: index.js
frontend/src/stores/: userStore.js
frontend/src/utils/: api.js  getRandomEmoji.js
frontend/src/views/: BirthDateForm.vue  ProfileView.vue
